--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.telicent.elasticsearch</groupId>
-	<artifactId>dynamicsynonyms</artifactId>
+	<artifactId>SynonymsPlugin</artifactId>
 	<version>1.0.0</version>
 	<description>A plugin for ElasticSearch providing an index-backed synonym handler</description>
 	<properties>
@@ -51,10 +51,14 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.elasticsearch</groupId>
-			<artifactId>elasticsearch</artifactId>
+			<groupId>co.elastic.clients</groupId>
+			<artifactId>elasticsearch-java</artifactId>
 			<version>${elasticsearch.version}</version>
-			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.12.3</version>
 		</dependency>
 		<!-- Testing -->
 		<dependency>
@@ -63,11 +67,13 @@
 			<version>${elasticsearch.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- 
 		<dependency>
-			<groupId>org.elasticsearch.client</groupId>
-			<artifactId>elasticsearch-rest-high-level-client</artifactId>
+			<groupId>co.elastic.clients</groupId>
+			<artifactId>elasticsearch-java</artifactId>
 			<version>${elasticsearch.version}</version>
 			<scope>test</scope>
 		</dependency>
+		-->
 	</dependencies>
 </project>
