--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 		<testcontainer.version>1.17.6</testcontainer.version>
 		<jackson.core.version>2.10.4</jackson.core.version>
 		<jackson.databind.version>2.10.4</jackson.databind.version>
+		<git-code-format-maven-plugin.version>4.2</git-code-format-maven-plugin.version>
 	</properties>
 	<build>
 		<plugins>
@@ -61,6 +62,44 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>com.cosium.code</groupId>
+				<artifactId>git-code-format-maven-plugin</artifactId>
+				<version>${git-code-format-maven-plugin.version}</version>
+				<executions>
+					<!-- On commit, format the modified java files -->
+					<execution>
+						<id>install-formatter-hook</id>
+						<goals>
+							<goal>install-hooks</goal>
+						</goals>
+					</execution>
+					<!-- On Maven verify phase, fail if any file (including unmodified) 
+						is badly formatted -->
+					<execution>
+						<id>validate-code-format</id>
+						<goals>
+							<goal>validate-code-format</goal>
+						</goals>
+					</execution>
+				</executions>
+				<dependencies>
+					<!-- Enable https://github.com/google/google-java-format -->
+					<dependency>
+						<groupId>com.cosium.code</groupId>
+						<artifactId>google-java-format</artifactId>
+						<version>${git-code-format-maven-plugin.version}</version>
+					</dependency>
+				</dependencies>
+				<configuration>
+					<formatterOptions>
+						<googleJavaFormat.aosp>true</googleJavaFormat.aosp>
+						<googleJavaFormat.fixImportsOnly>false</googleJavaFormat.fixImportsOnly>
+						<googleJavaFormat.skipSortingImports>false</googleJavaFormat.skipSortingImports>
+						<googleJavaFormat.skipRemovingUnusedImports>false</googleJavaFormat.skipRemovingUnusedImports>
+					</formatterOptions>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
