--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<version>7.17.5.0</version>
 	<description>A plugin for ElasticSearch providing an index-backed synonym handler</description>
 	<properties>
-		<elasticsearch.version>7.17.5</elasticsearch.version>
+		<elasticsearch.version>8.6.2</elasticsearch.version>
 		<jdk.version>17</jdk.version>
 		<testcontainer.version>1.17.6</testcontainer.version>
 		<jackson.core.version>2.10.4</jackson.core.version>
@@ -23,6 +23,24 @@
 				<configuration>
 					<source>${jdk.version}</source>
 					<target>${jdk.version}</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.12.4</version>
+				<executions>
+					<execution>
+						<id>default-test</id>
+						<phase>test</phase>
+						<goals>
+							<goal>test</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<systemPropertyVariables>
+						<elasticsearch-version>${elasticsearch.version}</elasticsearch-version>
+					</systemPropertyVariables>
 				</configuration>
 			</plugin>
 			<!-- Copy project dependencies -->
