Minor changes to pom config + hardcode plugin description to avoid formatting to break it
Signed-off-by: Julien Nioche <julien@digitalpebble.com>

--- a/src/main/resources/plugin-descriptor.properties
+++ b/src/main/resources/plugin-descriptor.properties
@@ -24,7 +24,7 @@
 #
 
 classname=io.telicent.elasticsearch.SynonymsPlugin
-description=${project.description}
+description=Plugin for ElasticSearch providing an index-backed synonym handler
 elasticsearch.version=${elasticsearch.version}
 java.version=${jdk.version}
 name=${project.artifactId}
