--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,10 @@
 	<groupId>io.telicent.elasticsearch</groupId>
 	<artifactId>SynonymsPlugin</artifactId>
 	<version>7.17.5.0</version>
-	<description>A plugin for ElasticSearch providing an index-backed synonym handler</description>
+	<description>A plugin for ElasticSearch providing an index-backed synonym
+		handler</description>
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<elasticsearch.version>7.17.5</elasticsearch.version>
 		<jdk.version>17</jdk.version>
 		<testcontainer.version>1.17.6</testcontainer.version>
@@ -20,6 +22,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
 				<configuration>
 					<source>${jdk.version}</source>
 					<target>${jdk.version}</target>
@@ -75,7 +78,8 @@
 							<goal>install-hooks</goal>
 						</goals>
 					</execution>
-					<!-- On Maven verify phase, fail if any file (including unmodified) 
+					<!-- On Maven verify phase, fail if any file (including
+					unmodified) 
 						is badly formatted -->
 					<execution>
 						<id>validate-code-format</id>
